fixes mysterious new planet widget alignment bug, is being caused by fedora.css

--- a/fedoracommunity/public/css/application-chrome.css
+++ b/fedoracommunity/public/css/application-chrome.css
@@ -1,3 +1,9 @@
+/* image margin override to override fedora.css */
+
+img {
+  margin: auto !important;
+}
+
 /* overrides for footer. edit these to make footer taller */
 
 #footer {
